# swaglabs-selenium-pytest

./: .gitignore  README.md  conftest.py  pyproject.toml  pytest.ini
config/: config.yaml
pages/: cart_page.py  inventory_page.py  login_page.py  visual_inventory_page.py
src/swaglabs_robotframework/: __init__.py
tests/: test_inventory.py  test_login.py  test_visual_user.py
tests/ui/: test_login.py
utils/: css_utils.py  image_src.py  inventory_locators.py  locators.py  wait_utils.py
