[project]
name = "swaglabs-selenium-pytest"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "saidharshan05", email = "saidharshan01@gmail.com" }
]
dependencies = [
    "selenium>=4.32.0",
    "pytest>=8.3.5",
    "black>=25.1.0",
    "pytest-html>=4.1.1",
    "pyyaml>=6.0.2",
    "pytest-repeat>=0.9.4",
    "pytest-order>=1.3.0",
    "pytest-xdist>=3.6.1",
    "pytest-check>=2.5.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/swaglabs_selenium_pytest"]
